# eda-tool

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/core/: Element.hpp  Resistor.cpp  Resistor.hpp
